--- a/packageManifest.json
+++ b/packageManifest.json
@@ -22,112 +22,112 @@
   "drivers": [
     {
       "id": "da263b7d-5b17-468a-836e-86ef98b11187",
-      "name": "Color Bulb",
+      "name": "TpLink Color Bulb",
       "namespace": "davegut",
       "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_color_bulb.groovy",
       "required": false
     },
     {
       "id": "53b8a000-57cc-4b31-bade-3b157b8774e9",
-      "name": "Dimming Bulb",
+      "name": "TpLink Dimming Bulb",
       "namespace": "davegut",
       "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_dimmer.groovy",
       "required": false
     },
     {
       "id": "ec486eae-0c27-4e79-bcd2-77afbb4013f0",
-      "name": "Light Strip",
+      "name": "TpLink Light Strip",
       "namespace": "davegut",
       "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_lightStrip.groovy",
       "required": false
     },
     {
       "id": "17c01a4b-34f7-4cb5-b6e3-10f6259b06c2",
-      "name": "HUB",
+      "name": "TpLink Hub",
       "namespace": "davegut",
       "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_hub.groovy",
       "required": false
     },
     {
       "id": "b9c64b4a-8b7e-4aca-b575-c1248e7976b4",
-      "name": "HUB:  Button",
+      "name": "TpLink HUB Button",
       "namespace": "davegut",
       "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_hub_button.groovy",
       "required": false
     },
     {
       "id": "504c09cc-d955-4b16-8baa-89ce9f4c4542",
-      "name": "HUB:  Contact Sensor",
+      "name": "TpLink Hub Contact",
       "namespace": "davegut",
       "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_hub_contact.groovy",
       "required": false
     },
     {
       "id": "09d5b8d6-d645-42f8-b982-2e113832841d",
-      "name": "HUB:  Motion Sensor",
+      "name": "TpLink Hub Motion",
       "namespace": "davegut",
       "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_hub_motion.groovy",
       "required": false
     },
     {
       "id": "52a4c55d-5e1b-4094-951d-1bfa6d760e61",
-      "name": "HUB:  Temp Humidity Sensor",
+      "name": "TpLink Hub TempHumidity",
       "namespace": "davegut",
       "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_hub_tempHumidity.groovy",
       "required": false
     },
     {
       "id": "2695f9fa-006f-4b6b-9c03-99b12d1cbde6",
-      "name": "HUB:  Leak Sensor",
+      "name": "TpLink Hub LeakTpLink",
       "namespace": "davegut",
       "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_hub_leak.groovy",
       "required": false
     },
     {
       "id": "afdc84ce-c66e-46b9-a6c2-ea3a7e44a5c5",
-      "name": "Plug-Switch",
+      "name": "TpLink Plug",
       "namespace": "davegut",
       "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_plug.groovy",
       "required": false
     },
     {
       "id": "19a7fb5c-195f-4dbc-abdc-7bddff78c79d",
-      "name": "Dimming Plug-Switch",
+      "name": "TpLInk Plug Dimmer",
       "namespace": "davegut",
       "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_dimmer.groovy",
       "required": false
     },
     {
       "id": "e3cd85e6-3da7-4576-a95a-f99ac0266b54",
-      "name": "Energy Monitor Plug",
+      "name": "TpLink Plug EM",
       "namespace": "davegut",
       "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_plug_em.groovy",
       "required": false
     },
     {
       "id": "0dc4415c-4f7d-4fc8-a8d3-ce9c14f86462",
-      "name": "Multi Plug Switch",
+      "name": "TpLink Parent",
       "namespace": "davegut",
       "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_parent.groovy",
       "required": false
     },
     {
       "id": "136c0b05-d6d8-49bb-9177-16263786d290",
-      "name": "MultiPlugSwitch:  Plug",
+      "name": "TpLInk Child Plug",
       "namespace": "davegut",
       "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_child_plug.groovy",
       "required": false
     },
     {
       "id": "6002553a-1251-4fbb-8293-b7c1cc0cd820",
-      "name": "MultiPlugSwitch:  Dimmer",
+      "name": "TpLInk Child Dimmer",
       "namespace": "davegut",
       "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_child_dimmer.groovy",
       "required": false
     },
     {
       "id": "e52db241-1c7e-438f-b633-3478e1a57883",
-      "name": "MultiPlugSwitch:  Fan",
+      "name": "TpLInk Child Fan",
       "namespace": "davegut",
       "location": "https://raw.githubusercontent.com/DaveGut/tpLink_Hubitat/main/Drivers/tpLink_child_fan.groovy",
       "required": false
